--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -321,7 +321,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_7457/616062419.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+                        "/tmp/ipykernel_16955/616062419.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
                         "  null_counts_per_year = df_Bilancino.groupby('Year').apply(lambda x: x.isnull().sum())\n"
                     ]
                 }
@@ -446,7 +446,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_7457/3886927952.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_16955/3886927952.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  sns.lineplot(x=df_Bilancino['Date'], y=df_Bilancino['Lake_Level'].fillna(method='ffill'), ax=ax, color='dodgerblue')\n"
                     ]
                 },
@@ -464,7 +464,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_7457/3886927952.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_16955/3886927952.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  sns.lineplot(x=df_Bilancino['Date'], y=df_Bilancino['Flow_Rate'].fillna(method='ffill'), ax=ax, color='dodgerblue')\n"
                     ]
                 },
@@ -591,9 +591,9 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_7457/716599735.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_16955/716599735.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  decomp_lake_level = seasonal_decompose(df_Bilancino['Lake_Level'].fillna(method='ffill'), model='additive', period=365)\n",
-                        "/tmp/ipykernel_7457/716599735.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_16955/716599735.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  decomp_flow_rate = seasonal_decompose(df_Bilancino['Flow_Rate'].fillna(method='ffill'), model='additive', period=365)\n"
                     ]
                 },
@@ -660,9 +660,9 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_7457/2511227491.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_16955/2511227491.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_acf(df_Bilancino['Lake_Level'].fillna(method='ffill'), lags=50, ax=ax[0])\n",
-                        "/tmp/ipykernel_7457/2511227491.py:7: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_16955/2511227491.py:7: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_pacf(df_Bilancino['Lake_Level'].fillna(method='ffill'), lags=50, ax=ax[1])\n"
                     ]
                 },
@@ -680,9 +680,9 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_7457/2511227491.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_16955/2511227491.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_acf(df_Bilancino['Flow_Rate'].fillna(method='ffill'), lags=50, ax=ax[0])\n",
-                        "/tmp/ipykernel_7457/2511227491.py:16: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_16955/2511227491.py:16: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_pacf(df_Bilancino['Flow_Rate'].fillna(method='ffill'), lags=50, ax=ax[1])\n"
                     ]
                 },
@@ -737,21 +737,7 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "ADF Test for Lake Level:\n"
-                    ]
-                },
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "/tmp/ipykernel_7457/2161570014.py:18: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-                        "  adf_test(df_Bilancino['Lake_Level'].fillna(method='ffill'))\n"
-                    ]
-                },
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
+                        "ADF Test for Lake Level:\n",
                         "ADF Statistic: -5.702961\n",
                         "p-value: 0.000001\n",
                         "Critical Values:\n",
@@ -767,7 +753,9 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_7457/2161570014.py:22: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_16955/2161570014.py:18: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "  adf_test(df_Bilancino['Lake_Level'].fillna(method='ffill'))\n",
+                        "/tmp/ipykernel_16955/2161570014.py:22: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  adf_test(df_Bilancino['Flow_Rate'].fillna(method='ffill'))\n"
                     ]
                 },
@@ -826,16 +814,34 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 15,
+            "execution_count": 13,
             "metadata": {},
             "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "/tmp/ipykernel_16955/2064456428.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "  sarima_model = auto_arima(df_Bilancino['Lake_Level'].fillna(method='ffill'),\n"
+                    ]
+                },
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
                         "Performing stepwise search to minimize aic\n",
-                        " ARIMA(2,1,2)(1,0,1)[52] intercept   : AIC=-11651.373, Time=18.50 sec\n",
-                        " ARIMA(0,1,0)(0,0,0)[52] intercept   : AIC=-10212.934, Time=0.45 sec\n"
+                        " ARIMA(2,1,2)(1,0,1)[26] intercept   : AIC=-11648.276, Time=4.58 sec\n",
+                        " ARIMA(0,1,0)(0,0,0)[26] intercept   : AIC=-10212.934, Time=0.45 sec\n",
+                        " ARIMA(1,1,0)(1,0,0)[26] intercept   : AIC=-11566.576, Time=2.31 sec\n",
+                        " ARIMA(0,1,1)(0,0,1)[26] intercept   : AIC=-11217.258, Time=3.14 sec\n",
+                        " ARIMA(0,1,0)(0,0,0)[26]             : AIC=-10214.932, Time=0.07 sec\n",
+                        " ARIMA(2,1,2)(0,0,1)[26] intercept   : AIC=-11649.836, Time=4.36 sec\n",
+                        " ARIMA(2,1,2)(0,0,0)[26] intercept   : AIC=-11654.045, Time=0.62 sec\n",
+                        " ARIMA(2,1,2)(1,0,0)[26] intercept   : AIC=-11636.595, Time=4.59 sec\n",
+                        " ARIMA(1,1,2)(0,0,0)[26] intercept   : AIC=-11643.763, Time=0.46 sec\n",
+                        " ARIMA(2,1,1)(0,0,0)[26] intercept   : AIC=-11642.798, Time=0.43 sec\n",
+                        " ARIMA(3,1,2)(0,0,0)[26] intercept   : AIC=-11656.005, Time=0.65 sec\n",
+                        " ARIMA(3,1,2)(1,0,0)[26] intercept   : AIC=-11638.197, Time=4.90 sec\n"
                     ]
                 },
                 {
@@ -860,12 +866,12 @@
                 "from pmdarima import auto_arima\n",
                 "\n",
                 "# Find the best SARIMA model\n",
-                "sarima_model = auto_arima(df_Bilancino['Lake_Level'].ffill(), \n",
-                "                          seasonal=True, m=52, # weekly iteration. (he tenido que bajar el seasonal period a semanal y poner un máximo de iteraciones por búsqueda para que mi ordenador pudiera entrenar el modelo)\n",
+                "sarima_model = auto_arima(df_Bilancino['Lake_Level'].fillna(method='ffill'),\n",
+                "                          seasonal=True, m=26, # weekly iteration. (he tenido que bajar el seasonal period a cada 2 semanas y poner un máximo de iteraciones por búsqueda para que mi ordenador pudiera entrenar el modelo)\n",
                 "                          trace=True,\n",
-                "                          error_action='warn',  \n",
+                "                          error_action='ignore',  \n",
                 "                          suppress_warnings=True,\n",
-                "                          maxiter=2, # Maximum iterations by search\n",
+                "                          maxiter=1, # Maximum iterations by search\n",
                 "                          stepwise=True)\n",
                 "\n"
             ]
