incapaz de solucionar

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -321,7 +321,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_16955/616062419.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+                        "/tmp/ipykernel_32540/616062419.py:2: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
                         "  null_counts_per_year = df_Bilancino.groupby('Year').apply(lambda x: x.isnull().sum())\n"
                     ]
                 }
@@ -446,7 +446,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_16955/3886927952.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_32540/3886927952.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  sns.lineplot(x=df_Bilancino['Date'], y=df_Bilancino['Lake_Level'].fillna(method='ffill'), ax=ax, color='dodgerblue')\n"
                     ]
                 },
@@ -464,7 +464,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_16955/3886927952.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_32540/3886927952.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  sns.lineplot(x=df_Bilancino['Date'], y=df_Bilancino['Flow_Rate'].fillna(method='ffill'), ax=ax, color='dodgerblue')\n"
                     ]
                 },
@@ -591,9 +591,9 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_16955/716599735.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_32540/716599735.py:4: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  decomp_lake_level = seasonal_decompose(df_Bilancino['Lake_Level'].fillna(method='ffill'), model='additive', period=365)\n",
-                        "/tmp/ipykernel_16955/716599735.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_32540/716599735.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  decomp_flow_rate = seasonal_decompose(df_Bilancino['Flow_Rate'].fillna(method='ffill'), model='additive', period=365)\n"
                     ]
                 },
@@ -660,9 +660,9 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_16955/2511227491.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_32540/2511227491.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_acf(df_Bilancino['Lake_Level'].fillna(method='ffill'), lags=50, ax=ax[0])\n",
-                        "/tmp/ipykernel_16955/2511227491.py:7: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_32540/2511227491.py:7: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_pacf(df_Bilancino['Lake_Level'].fillna(method='ffill'), lags=50, ax=ax[1])\n"
                     ]
                 },
@@ -680,9 +680,9 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_16955/2511227491.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_32540/2511227491.py:14: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_acf(df_Bilancino['Flow_Rate'].fillna(method='ffill'), lags=50, ax=ax[0])\n",
-                        "/tmp/ipykernel_16955/2511227491.py:16: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_32540/2511227491.py:16: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  plot_pacf(df_Bilancino['Flow_Rate'].fillna(method='ffill'), lags=50, ax=ax[1])\n"
                     ]
                 },
@@ -737,7 +737,21 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "ADF Test for Lake Level:\n",
+                        "ADF Test for Lake Level:\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "/tmp/ipykernel_32540/2161570014.py:18: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "  adf_test(df_Bilancino['Lake_Level'].fillna(method='ffill'))\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
                         "ADF Statistic: -5.702961\n",
                         "p-value: 0.000001\n",
                         "Critical Values:\n",
@@ -753,9 +767,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_16955/2161570014.py:18: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-                        "  adf_test(df_Bilancino['Lake_Level'].fillna(method='ffill'))\n",
-                        "/tmp/ipykernel_16955/2161570014.py:22: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_32540/2161570014.py:22: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  adf_test(df_Bilancino['Flow_Rate'].fillna(method='ffill'))\n"
                     ]
                 },
@@ -821,7 +833,7 @@
                     "name": "stderr",
                     "output_type": "stream",
                     "text": [
-                        "/tmp/ipykernel_16955/2064456428.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+                        "/tmp/ipykernel_32540/947442196.py:5: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
                         "  sarima_model = auto_arima(df_Bilancino['Lake_Level'].fillna(method='ffill'),\n"
                     ]
                 },
@@ -830,18 +842,23 @@
                     "output_type": "stream",
                     "text": [
                         "Performing stepwise search to minimize aic\n",
-                        " ARIMA(2,1,2)(1,0,1)[26] intercept   : AIC=-11648.276, Time=4.58 sec\n",
-                        " ARIMA(0,1,0)(0,0,0)[26] intercept   : AIC=-10212.934, Time=0.45 sec\n",
-                        " ARIMA(1,1,0)(1,0,0)[26] intercept   : AIC=-11566.576, Time=2.31 sec\n",
-                        " ARIMA(0,1,1)(0,0,1)[26] intercept   : AIC=-11217.258, Time=3.14 sec\n",
-                        " ARIMA(0,1,0)(0,0,0)[26]             : AIC=-10214.932, Time=0.07 sec\n",
-                        " ARIMA(2,1,2)(0,0,1)[26] intercept   : AIC=-11649.836, Time=4.36 sec\n",
-                        " ARIMA(2,1,2)(0,0,0)[26] intercept   : AIC=-11654.045, Time=0.62 sec\n",
-                        " ARIMA(2,1,2)(1,0,0)[26] intercept   : AIC=-11636.595, Time=4.59 sec\n",
-                        " ARIMA(1,1,2)(0,0,0)[26] intercept   : AIC=-11643.763, Time=0.46 sec\n",
-                        " ARIMA(2,1,1)(0,0,0)[26] intercept   : AIC=-11642.798, Time=0.43 sec\n",
-                        " ARIMA(3,1,2)(0,0,0)[26] intercept   : AIC=-11656.005, Time=0.65 sec\n",
-                        " ARIMA(3,1,2)(1,0,0)[26] intercept   : AIC=-11638.197, Time=4.90 sec\n"
+                        " ARIMA(2,1,2)(1,0,1)[12] intercept   : AIC=-11670.407, Time=15.71 sec\n",
+                        " ARIMA(0,1,0)(0,0,0)[12] intercept   : AIC=-10212.934, Time=0.50 sec\n",
+                        " ARIMA(1,1,0)(1,0,0)[12] intercept   : AIC=-11575.811, Time=3.21 sec\n",
+                        " ARIMA(0,1,1)(0,0,1)[12] intercept   : AIC=-11239.199, Time=4.35 sec\n",
+                        " ARIMA(0,1,0)(0,0,0)[12]             : AIC=-10214.932, Time=0.15 sec\n",
+                        " ARIMA(2,1,2)(0,0,1)[12] intercept   : AIC=-11657.174, Time=14.09 sec\n",
+                        " ARIMA(2,1,2)(1,0,0)[12] intercept   : AIC=-11657.852, Time=16.01 sec\n",
+                        " ARIMA(2,1,2)(2,0,1)[12] intercept   : AIC=-11669.142, Time=40.73 sec\n",
+                        " ARIMA(2,1,2)(1,0,2)[12] intercept   : AIC=-11669.980, Time=42.43 sec\n",
+                        " ARIMA(2,1,2)(0,0,0)[12] intercept   : AIC=-11679.386, Time=6.11 sec\n",
+                        " ARIMA(1,1,2)(0,0,0)[12] intercept   : AIC=-11645.430, Time=4.18 sec\n",
+                        " ARIMA(2,1,1)(0,0,0)[12] intercept   : AIC=-11680.417, Time=4.04 sec\n",
+                        " ARIMA(2,1,1)(1,0,0)[12] intercept   : AIC=-11677.893, Time=14.38 sec\n",
+                        " ARIMA(2,1,1)(0,0,1)[12] intercept   : AIC=-11683.675, Time=14.90 sec\n",
+                        " ARIMA(2,1,1)(1,0,1)[12] intercept   : AIC=-11675.595, Time=17.42 sec\n",
+                        " ARIMA(2,1,1)(0,0,2)[12] intercept   : AIC=-11689.932, Time=38.72 sec\n",
+                        " ARIMA(2,1,1)(1,0,2)[12] intercept   : AIC=-11676.450, Time=43.12 sec\n"
                     ]
                 },
                 {
@@ -867,11 +884,11 @@
                 "\n",
                 "# Find the best SARIMA model\n",
                 "sarima_model = auto_arima(df_Bilancino['Lake_Level'].fillna(method='ffill'),\n",
-                "                          seasonal=True, m=26, # weekly iteration. (he tenido que bajar el seasonal period a cada 2 semanas y poner un máximo de iteraciones por búsqueda para que mi ordenador pudiera entrenar el modelo)\n",
+                "                          seasonal=True, m=12, # weekly iteration. (he tenido que bajar el seasonal period a cada 2 semanas y poner un máximo de iteraciones por búsqueda para que mi ordenador pudiera entrenar el modelo)\n",
                 "                          trace=True,\n",
                 "                          error_action='ignore',  \n",
                 "                          suppress_warnings=True,\n",
-                "                          maxiter=1, # Maximum iterations by search\n",
+                "                          #maxiter=1, # Maximum iterations by search\n",
                 "                          stepwise=True)\n",
                 "\n"
             ]
@@ -882,45 +899,13 @@
             "metadata": {},
             "outputs": [
                 {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "/tmp/ipykernel_13689/254866397.py:2: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-                        "  sarima_model.fit(df_Bilancino['Flow_Rate'].fillna(method='ffill'))\n"
-                    ]
-                },
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "                                      SARIMAX Results                                       \n",
-                        "============================================================================================\n",
-                        "Dep. Variable:                                    y   No. Observations:                 6026\n",
-                        "Model:             SARIMAX(2, 0, 2)x(0, 0, [1], 12)   Log Likelihood              -13020.157\n",
-                        "Date:                              Tue, 13 Aug 2024   AIC                          26054.314\n",
-                        "Time:                                      15:51:06   BIC                          26101.241\n",
-                        "Sample:                                           0   HQIC                         26070.606\n",
-                        "                                             - 6026                                         \n",
-                        "Covariance Type:                                opg                                         \n",
-                        "==============================================================================\n",
-                        "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
-                        "------------------------------------------------------------------------------\n",
-                        "intercept      0.0502      0.014      3.505      0.000       0.022       0.078\n",
-                        "ar.L1          1.4445      0.014    101.013      0.000       1.416       1.473\n",
-                        "ar.L2         -0.4627      0.012    -37.675      0.000      -0.487      -0.439\n",
-                        "ma.L1         -0.4618      0.015    -31.090      0.000      -0.491      -0.433\n",
-                        "ma.L2         -0.3263      0.004    -73.678      0.000      -0.335      -0.318\n",
-                        "ma.S.L12      -0.0188      0.004     -4.279      0.000      -0.027      -0.010\n",
-                        "sigma2         4.4067      0.015    298.080      0.000       4.378       4.436\n",
-                        "===================================================================================\n",
-                        "Ljung-Box (L1) (Q):                   0.01   Jarque-Bera (JB):          14460797.74\n",
-                        "Prob(Q):                              0.94   Prob(JB):                         0.00\n",
-                        "Heteroskedasticity (H):               0.62   Skew:                             9.07\n",
-                        "Prob(H) (two-sided):                  0.00   Kurtosis:                       242.30\n",
-                        "===================================================================================\n",
-                        "\n",
-                        "Warnings:\n",
-                        "[1] Covariance matrix calculated using the outer product of gradients (complex-step).\n"
+                    "ename": "",
+                    "evalue": "",
+                    "output_type": "error",
+                    "traceback": [
+                        "\u001b[1;31mLa ejecución de celdas con '/usr/bin/python3' requiere el paquete ipykernel.\n",
+                        "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+                        "\u001b[1;31mCommand: '/usr/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
                     ]
                 }
             ],
