ejercicio finalizado. problemas de CPU para entrenar correctamente el modelo

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -925,7 +925,7 @@
                 "\n",
                 "# Find the best SARIMA model\n",
                 "sarima_model = auto_arima(df_Bilancino['Flow_Rate'].fillna(method='ffill'),\n",
-                "                          seasonal=True, m=12, # monthly iteration. (he tenido que bajar el seasonal period a cada 2 semanas y poner un máximo de iteraciones por búsqueda para que mi ordenador pudiera entrenar el modelo)\n",
+                "                          seasonal=True, m=12, # monthly iteration. (he tenido que bajar el seasonal period a cada mes y poner un máximo de iteraciones por búsqueda de 1 para que mi ordenador pudiera entrenar el modelo)\n",
                 "                          trace=True,\n",
                 "                          error_action='ignore',  \n",
                 "                          suppress_warnings=True,\n",
@@ -934,11 +934,15 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
+            "cell_type": "markdown",
             "metadata": {},
-            "outputs": [],
-            "source": []
+            "source": [
+                "Nota: He tenido muchos problemas para poder entrenar el modelo. He tenido que reducir muchísimo las max iteraciones y periodos de datos para que no se me colgara o me apareciera el siguiente mensaje:\n",
+                "\n",
+                "\"No se puede ejecutar el código, la sesión se ha eliminado. Intente reiniciar el kernel.\n",
+                "\n",
+                "El Kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. Revise el código de las celdas para identificar una posible causa del error. Haga clic aquí para obtener más información. \""
+            ]
         },
         {
             "cell_type": "code",
@@ -1062,7 +1066,7 @@
                 "\n",
                 "# Create a date range for the forecast\n",
                 "last_date = df_Bilancino['Date'].max()\n",
-                "future_dates = pd.date_range(start=last_date, periods=n_periods + 1, freq='W')[1:]  # Skip the first date as it's the last date of the historical data\n",
+                "future_dates = pd.date_range(start=last_date, periods=n_periods + 1, freq='W')[1:]  \n",
                 "\n",
                 "# Create a DataFrame with the forecasted values\n",
                 "forecast_df = pd.DataFrame({\n",
@@ -1101,6 +1105,14 @@
                 "plt.ylabel('Flow Rate')\n",
                 "plt.legend()\n",
                 "plt.show()"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "NOTA:\n",
+                "EL modelo entrenado no es capaz de predecir correctamente (ni acercercarse) el flow_rate esperado. Esto se debe a los periodos mensuales y max iteración de 1 que he tenido que usar como parámetros para que el kernel no se colgara al entrenar el modelo. Para obtener mejor precisión necesitaria mayor CPU para poder hacer periodos mas cortos (lo ideal m=365) y un número de max iteraciones mas elevado."
             ]
         }
     ],
